Update code to match internal Embrace repo
* Update to version 0.1.51 (the latest internal version)
* Move `tests/` to `src/__tests__`/ to match internal code
* Do not build tests when doing `yarn build`
  * This meant excluding the spec files from `tsconfig.json`, so this
    commit also introduces `tsconfig.eslint.json` so that ESLint will
    still find and lint those test files.
* Update `jest.config.js` for new version of ts-jest
* Update package versions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
+    "importHelpers": true,
     "jsx": "react",
     "lib": ["es6", "es2017", "dom", "scripthost"],
     "moduleResolution": "node",
@@ -19,5 +20,6 @@
     "skipLibCheck": true,
     "composite": true,
     "incremental": true
-  }
+  },
+  "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"]
 }
