--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grammarly/embrace",
-  "version": "0.1.0",
+  "version": "0.1.51",
   "description": "Typesafe, declarative, and composable UI engine on top of React and Focal",
   "main": "cjs/index.js",
   "module": "esm/index.js",
@@ -27,7 +27,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@grammarly/focal": "0.8.5",
+    "@grammarly/focal": "^0.8.5",
     "fp-ts": "2.9.5",
     "ts-toolbelt": "6.9.9"
   },
@@ -38,36 +38,37 @@
   "devDependencies": {
     "@grammarly/tslint-config": "0.6.0",
     "@types/enzyme": "3.1.15",
-    "@types/enzyme-adapter-react-16": "1.0.3",
-    "@types/jest": "26.0.20",
+    "@types/enzyme-adapter-react-16": "1.0.6",
+    "@types/jest": "29.2.3",
     "@types/react": "16.8.2",
-    "@typescript-eslint/eslint-plugin": "4.8.1",
-    "@typescript-eslint/eslint-plugin-tslint": "4.8.1",
-    "@typescript-eslint/parser": "4.8.1",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/eslint-plugin-tslint": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
     "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.7.1",
+    "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "3.3.3",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "6.7.0",
     "eslint-import-resolver-typescript": "1.1.1",
     "eslint-nibble": "5.1.0",
-    "eslint-plugin-fp-ts": "0.2.1",
-    "eslint-plugin-functional": "3.2.1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-import-helpers": "1.0.2",
-    "eslint-plugin-jest": "24.1.3",
+    "eslint-plugin-fp-ts": "0.3.0",
+    "eslint-plugin-functional": "4.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import-helpers": "1.2.1",
+    "eslint-plugin-jest": "27.1.3",
     "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-sonarjs": "^0.5.0",
-    "eslint-plugin-todo-plz": "1.1.0",
-    "jest": "26.6.3",
+    "eslint-plugin-sonarjs": "^0.11.0",
+    "eslint-plugin-todo-plz": "1.2.1",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "rxjs": "6.5.3",
-    "ts-jest": "26.4.4",
-    "tslib": "1.11.1",
+    "ts-jest": "29.1.1",
+    "tslib": "^2.3.0",
     "tslint": "5.18.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "4.1.2"
+    "typescript": "5.2.2"
   },
   "resolutions": {
     "@types/node": "18.11.9"
