--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "author": "Grammarly, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "tsc -p tsconfig.build.json --module es2015 --target es5 --outDir esm2015 -w",
+    "dev": "yarn tsc -p tsconfig.build.json --module es2015 --target es5 --outDir esm2015 -w",
     "build": "yarn build:cjs && yarn build:esm && yarn build:esm2015",
-    "build:cjs": "tsc -p tsconfig.build.json --module commonjs --target es5 --outDir cjs",
-    "build:esm": "tsc -p tsconfig.build.json --module es2015 --target es5 --outDir esm",
-    "build:esm2015": "tsc -p tsconfig.build.json --module es2015 --target es2015 --outDir esm2015",
+    "build:cjs": "yarn tsc -p tsconfig.build.json --module commonjs --target es5 --outDir cjs",
+    "build:esm": "yarn tsc -p tsconfig.build.json --module es2015 --target es5 --outDir esm",
+    "build:esm2015": "yarn tsc -p tsconfig.build.json --module es2015 --target es2015 --outDir esm2015",
     "lint": "eslint './**/*.ts?(x)'",
     "test": "jest"
   },
