--- a/package.json
+++ b/package.json
@@ -68,5 +68,6 @@
     "tslint": "5.18.0",
     "tslint-sonarts": "^1.9.0",
     "typescript": "4.1.2"
-  }
+  },
+  "packageManager": "yarn@1.22.21"
 }
