--- a/package.json
+++ b/package.json
@@ -69,5 +69,8 @@
     "tslint-sonarts": "^1.9.0",
     "typescript": "4.1.2"
   },
+  "resolutions": {
+    "@types/node": "18.11.9"
+  },
   "packageManager": "yarn@1.22.21"
 }
